# Stackwise-Virtual

./: .gitignore  README.md  README.rst  SVLTask-create-testbed-2.txt  SVLTask-create-testbed-5.txt  dump.rdb  file.txt  requirements.txt  setup.cfg  setup.py  setup.sh  stackwisevirtual.sh  svl.sh
.github/workflows/: pylint.yml
job/: svl_job.py  svl_job.tem  svl_remove_job.py  svl_remove_job.tem  svl_update_job.py  svl_update_job.tem
scripts/: remove_stackwise_virtual.py  stackwise_virtual.py  stackwise_virtual1.py  update_links_on_stackwise_virtual.py
src/stackwise_virtual/: manage.py
src/stackwise_virtual/sass/: style.scss
src/stackwise_virtual/stackwise_virtual/: asgi.py  settings.py  urls.py  wsgi.py
src/stackwise_virtual/testbed_config/: apps.py  forms.py  run_SWV.py  urls.py  views.py
svlservices/: _metadata.py  client_manager.py  svlservices.py
testbed/: 9500_9600_sv_tb.yaml  9500_sv_tb.yaml  9600_sv_tb.yaml  9600_sv_tb1.yaml  generated_testbed_file.yaml  testbed_generated.yaml
website/: dump.rdb
website/files/testbed_preview/: preview.txt  testbed-file.yaml
website/files/testbeds/: testbed-17.yaml  testbed-18.yaml  testbed-19.yaml  testbed-2.yaml  testbed-20.yaml  testbed-31.yaml  testbed-5.yaml
website/scss/: style.scss
website/testbedconfig/: admin.py  apps.py  forms.py  models.py  tasks.py  testbed-file.yaml  urls.py  views.py
website/testbedconfig/migrations/: 0001_initial.py
website/testbedconfig/templates/: base.html  form_view.html  saved_files_view.html  (+1 more)
website/website/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
(+15 files in other folders)
