[metadata]
name = svlservices-pawansi
version = 1.0
author = Pawan Singh
author_email = pawansi@cisco.com
description = The module help form Stackwise Virtual from two independent cat9k switches.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DNACENSolutions/Stackwise-Virtual
project_urls =
    Bug Tracker = https://github.com/DNACENSolutions/Stackwise-Virtual/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = svlservices
packages = find:
python_requires = >=3.6

[options.packages.find]
where = svlservices
